# Akari

./: .gitignore  Anchor.toml  DEMO.md  README.md  devnet-addresses.json  oracle-keypair.json  package-lock.json  package.json  standby-keypair.json
app/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
app/src/components/: AppWalletProvider.tsx  PrivyProviderWrapper.tsx
app/src/idl/: akari.json  (+2 more)
docs/: PLAN.md  environment-setup.md
merkle-tools/: build-tree.ts  generate-proof.ts  package-lock.json  package.json  tree-output.json  tsconfig.json  update-root.ts  wallet-list.json
oracle-relay/: index.ts  leader-election.ts  package-lock.json  package.json  parse_docs.js  six-client.ts  standby.ts  submitter.ts  tsconfig.json
programs/akari/: Cargo.toml
programs/akari/src/: errors.rs  events.rs  lib.rs
programs/akari/src/instructions/: acquire_relay_lock.rs  deploy_yield.rs  deposit.rs  flag_wallet.rs  fx_swap.rs  harvest_yield.rs  initialize_epoch_state.rs  initialize_oracle_relay_lock.rs  initialize_pool.rs  mod.rs  pause_pool.rs  register_subsidiary.rs  renew_relay_lock.rs  travel_rule_attach.rs  update_fx_rate.rs  update_oracle_authority.rs  withdraw.rs
programs/akari/src/state/: epoch_state.rs  mod.rs  oracle_relay_lock.rs  pool.rs  six_price_feed.rs  subsidiary.rs  travel_rule.rs  yield_position.rs
programs/transfer_hook/: Cargo.toml
scripts/: create-mints.ts  setup-devnet.ts  simulate-transfers.ts
tests/: akari.ts  fx-swap.ts  oracle-relay-lock.ts  yield_router.ts
(+53 files in other folders)
